[package]
name = "redisfs"
version = "0.1.0"
edition = "2021"
description = "A small CLI tool to use Redis as a file server"
readme = "README.md"
repository = "https://github.com/BuyMyMojo/RedisFS/"
license = "gpl-2.0"
keywords = ["redis", "cli"]
categories = ["command-line-utilities"]
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
redis = "0.21.5"
pretty-bytes = "0.2.2"